--- a/Resturants/Info.plist
+++ b/Resturants/Info.plist
@@ -2,16 +2,18 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>UIUserInterfaceStyle</key>
-	<string>Light</string>
-	<key>NSAppleMusicUsageDescription</key>
-	<string></string>
-	<key>NSCameraUsageDescription</key>
-	<string>we need camera access.</string>
-	<key>NSMicrophoneUsageDescription</key>
-	<string>we need microPhone access to be record your voice as well.</string>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>we need access of your camera to be record.</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>app-1-866420255774-ios-01b2ef8878a61b3414d20f</string>
+			</array>
+		</dict>
+		<dict/>
+	</array>
 	<key>UIAppFonts</key>
 	<array>
 		<string>Inter-VariableFont_slnt,wght.tff</string>
