login fixed now

--- a/GoogleService-Info.plist
+++ b/GoogleService-Info.plist
@@ -2,6 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CLIENT_ID</key>
+	<string>866420255774-r4qek4o885bdjcgdjtc45jaitdioagao.apps.googleusercontent.com</string>
+	<key>REVERSED_CLIENT_ID</key>
+	<string>com.googleusercontent.apps.866420255774-r4qek4o885bdjcgdjtc45jaitdioagao</string>
+	<key>ANDROID_CLIENT_ID</key>
+	<string>866420255774-ls5lgifra4btpunod7uebj0b769c42t3.apps.googleusercontent.com</string>
 	<key>API_KEY</key>
 	<string>AIzaSyAzgvuIH2024ZLpkN2-cvPmAQDxeiTs0Wo</string>
 	<key>GCM_SENDER_ID</key>
