--- a/Resturants/Info.plist
+++ b/Resturants/Info.plist
@@ -9,10 +9,15 @@
 			<string>Editor</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>app-1-866420255774-ios-01b2ef8878a61b3414d20f</string>
+				<string>com.googleusercontent.apps.866420255774-r4qek4o885bdjcgdjtc45jaitdioagao</string>
 			</array>
 		</dict>
-		<dict/>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array/>
+		</dict>
 	</array>
 	<key>UIAppFonts</key>
 	<array>
@@ -37,6 +42,11 @@
 			</array>
 		</dict>
 	</dict>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>processing</string>
+		<string>push-to-talk</string>
+	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
 </dict>
